# stochastic_model

./: .gitignore  .pypirc  LICENSE  README.md  option_data.csv  pyproject.toml
.github/workflows/: workflow.yaml
example/: develop_the_model.ipynb  develope_the_model.ipynb  example_usecase.ipynb
src/: __init__.py  stochastic_model.py
src/stochastic_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
