[project]
name = "stochastic-model"
version = "0.1.0"
description = "A stochastic model based on Black-Scholes, Heston and Merton theories for pricing options with internal capability of calibrating to market data."
authors = [{name="Soli Gale"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "yfinance"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"